--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body{
   justify-content: center;
 }
 
+
+button{
+  padding: 0.35rem 1rem;
+  border-radius: 8px;
+}
+
 .blueBlob{
   position: absolute;
   bottom: 0;
@@ -90,10 +96,8 @@ main{
   color: #4D5B9E;
   /* width: 66px; */
   /* height: 22px; */
-  border-radius: 8px;
   font-size: 0.64rem;
   border: 1px solid #4D5B9E;
-  padding: 0.35rem 1rem;
 }
 
 /* the button after being selected */
@@ -101,4 +105,39 @@ main{
 .response-button.selected{
   background-color: #D6DBF5;
   border: none;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25rem;
+  margin-top: 1rem;
+}
+
+.footer-button{
+  border: none;
+  background-color: #4D5B9E;
+  color: white;
+  padding: 0.65rem 1.2rem;
+  font-size: 0.64rem;
+  font-weight: 500;
+}
+
+.footer p{
+  font-weight: bold;
+  font-size: 0.9rem;
+}
+
+
+.response-button.correct{
+  background-color: #94D7A2;
+}
+
+.response-button.incorrect{
+  background-color: #F8BCBC;
+}
+
+.response-button.transparent{
+  opacity: 50%;
 }
