--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ body{
   justify-content: center;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+
 
 button{
   padding: 0.35rem 1rem;
@@ -107,7 +115,7 @@ main{
   border: none;
 }
 
-.footer{
+footer{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,7 +123,7 @@ main{
   margin-top: 1rem;
 }
 
-.footer-button{
+footer button{
   border: none;
   background-color: #4D5B9E;
   color: white;
@@ -124,7 +132,7 @@ main{
   font-weight: 500;
 }
 
-.footer p{
+footer p{
   font-weight: bold;
   font-size: 0.9rem;
 }
@@ -140,4 +148,32 @@ main{
 
 .response-button.transparent{
   opacity: 50%;
+}
+
+footer button.buffer{
+  background-color: #fcf6bd;
+  color: #293264;
+  border: 1px solid #293264;
+}
+
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #D6DBF5; /* Light color for the whole ring */
+    border-top: 5px solid #4D5B9E; /* Darker color for the moving part */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
